<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/liner"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="28dp"
            android:gravity="end"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="80sp" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/liner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Button"
                android:onClick="onNumberClick"
                android:text="@string/ac" />

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Button"
                android:layout_marginHorizontal="16dp"
                android:onClick="onOperationClick"
                android:text="@string/percent" />

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Button"
                android:onClick="onOperationClick"
                android:text="@string/pm" />

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:layout_marginStart="16dp"
                android:onClick="onOperationClick"
                android:text="@string/drob" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.button.MaterialButton
                style="@style/DarkGray.Button"
                android:onClick="onNumberClick"
                android:text="@string/nine" />

            <com.google.android.material.button.MaterialButton
                style="@style/DarkGray.Button"
                android:layout_marginHorizontal="16dp"
                android:onClick="onNumberClick"
                android:text="@string/eight" />

            <com.google.android.material.button.MaterialButton
                style="@style/DarkGray.Button"
                android:onClick="onNumberClick"
                android:text="@string/seven" />

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:layout_marginStart="16dp"
                android:onClick="onOperationClick"
                android:text="@string/x" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.button.MaterialButton
                style="@style/DarkGray.Button"
                android:onClick="onNumberClick"
                android:text="@string/six" />

            <com.google.android.material.button.MaterialButton
                style="@style/DarkGray.Button"
                android:layout_marginHorizontal="16dp"
                android:onClick="onNumberClick"
                android:text="@string/five" />

            <com.google.android.material.button.MaterialButton
                style="@style/DarkGray.Button"
                android:onClick="onNumberClick"
                android:text="@string/four" />

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:layout_marginStart="16dp"
                android:onClick="onOperationClick"
                android:text="@string/minus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.button.MaterialButton
                style="@style/DarkGray.Button"
                android:onClick="onNumberClick"
                android:text="@string/three" />

            <com.google.android.material.button.MaterialButton
                style="@style/DarkGray.Button"
                android:onClick="onNumberClick"
                android:layout_marginHorizontal="16dp"
                android:text="@string/two" />

            <com.google.android.material.button.MaterialButton
                style="@style/DarkGray.Button"
                android:onClick="onNumberClick"
                android:text="@string/one" />

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:layout_marginStart="16dp"
                android:onClick="onOperationClick"
                android:text="@string/plus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.button.MaterialButton
                style="@style/DarkGray.Button"
                android:layout_width="176dp"
                android:layout_marginEnd="16dp"
                android:paddingStart="32dp"
                android:text="@string/zero"
                android:onClick="onNumberClick"
                android:textAlignment="textStart" />

            <com.google.android.material.button.MaterialButton
                style="@style/DarkGray.Button"
                android:onClick="onNumberClick"
                android:text="@string/and" />

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:layout_marginStart="16dp"
                android:text="@string/equal" />

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>